# bloatfetch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: db.rs  detect.rs  main.rs  render.rs
