[package]
name = "bloatfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_Storage_FileSystem"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
